# translation-app

./: .env.example  .gitignore  .pre-commit-config.yaml  .wakatime-project  AGENTS.md  BEST_PRACTICES_REPORT.md  CLAUDE.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  CURRENT_PLAN.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_SCORECARD.md  DOC_AUDIT_SUMMARY.md  INCONSISTENCY_LIST.md  PERFORMANCE_ANALYSIS_REPORT.md  PLAN.md  README.md  REFACTORING_REPORT.md  SPRINT_3_PLAN.md  TECHNICAL_DEBT_REPORT.md  TECH_STACK.md  TESTING_STRATEGY_REPORT.md  TESTING_SUMMARY.md  alembic.ini  design_guidelines.json  docker-compose.production.yml  docker-compose.yml  index.html  plan-ws-ticket-auth.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sgconfig.yml
.claude/: boundaries.md  reference.md
.dev/: .gitignore
.emergent/: emergent.yml
alembic/: env.py
backend/: .env.example  .env.production.example  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  coverage.html  docker-compose.test.yml  dump.rdb  go.mod  go.sum  server.py
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  openapi.yaml
frontend/: AGENTS.md  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
memory/: PRD.md  test_credentials.md
roadmap/: roadmap.md
scripts/: _lib.sh  dev.sh  smoke-test.sh
test_reports/: iteration_1.json
tests/: conftest.py
todos/: 001-pending-p1-jwt-default-secret-security.md  (+7 more)
(+482 files in other folders)
